[gd_scene load_steps=8 format=3 uid="uid://boqtqxpn8bqhe"]

[ext_resource type="Script" path="res://Ui/button_banner.gd" id="1_bcvc1"]
[ext_resource type="Texture2D" uid="uid://dmeax7ka8gdpx" path="res://Ressources/Icons-Essentials.png" id="1_wht7e"]
[ext_resource type="PackedScene" uid="uid://b2fycdcr5pjw" path="res://Ui/toggle_overlay.tscn" id="2_33pnd"]
[ext_resource type="PackedScene" uid="uid://bixol0rog3ym0" path="res://Ui/color_mode_toggle.tscn" id="3_qmax5"]
[ext_resource type="PackedScene" uid="uid://c11ij5hp3ojhk" path="res://Ui/pattern_mode_toggle.tscn" id="4_g4tox"]
[ext_resource type="PackedScene" uid="uid://db00p3y5yjp30" path="res://Ui/toggle_effect.tscn" id="6_4if42"]
[ext_resource type="PackedScene" uid="uid://ckyauloggu5gv" path="res://Ui/pause_button.tscn" id="7_euj5r"]

[node name="Button_banner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcvc1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 192.0
offset_bottom = 32.0
texture = ExtResource("1_wht7e")
draw_center = false
region_rect = Rect2(16, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Toggle_Overlay" parent="." instance=ExtResource("2_33pnd")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 32.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 4.0
grow_horizontal = 1
grow_vertical = 1

[node name="Color_mode_toggle" parent="." instance=ExtResource("3_qmax5")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 56.0
offset_top = 4.0
offset_right = 56.0
offset_bottom = 4.0
grow_horizontal = 1
grow_vertical = 1

[node name="Pattern_mode_toggle" parent="." instance=ExtResource("4_g4tox")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 80.0
offset_top = 4.0
offset_right = 80.0
offset_bottom = 4.0
grow_horizontal = 1
grow_vertical = 1

[node name="Toggle_Effect" parent="." instance=ExtResource("6_4if42")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 164.0
offset_top = 4.0
offset_right = 164.0
offset_bottom = 4.0
grow_horizontal = 1
grow_vertical = 1

[node name="Pause_Button" parent="." instance=ExtResource("7_euj5r")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 1
grow_vertical = 1

[node name="Separator" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 2.0
offset_right = 33.0
offset_bottom = 30.0
texture = ExtResource("1_wht7e")
draw_center = false
region_rect = Rect2(48, 0, 16, 16)
patch_margin_left = 3
patch_margin_top = 6
patch_margin_right = 3
patch_margin_bottom = 6
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Separator2" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 165.0
offset_bottom = 28.0
texture = ExtResource("1_wht7e")
region_rect = Rect2(48, 0, 16, 16)
patch_margin_left = 3
patch_margin_top = 6
patch_margin_right = 3
patch_margin_bottom = 6
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
